# criterion-inverted-throughput

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: lint-and-test.yml
src/: lib.rs
