[package]
name = "criterion-inverted-throughput"
version = "0.1.0"
edition = "2021"
authors = ["loloicci <loloicci@loloicci.dev>"]
license = "MIT"
description = "Custom criterion measurement to get thropughts in the format [time]/[elements or bytes]"
repository = "https://github.com/loloicci/criterion-inverted-throughput"
readme = "README.md"

[dependencies]
criterion = "0.5.1"

[dev-dependencies]
test-case = "3.3.1"